--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -1,6 +1,10 @@
 .footer{
-    height: 100%;
-    text-align: center;
-    font-size: medium;
-    color: rgb(158, 158, 158);
+  margin-top: 1rem;
+  padding: 1rem;
+  background-color: rgb(235, 195, 64);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
 }
