--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -4,10 +4,14 @@
   color: rgb(255, 255, 255);
   background-color: #1A1A1A;
   border-radius: 25px;
-  width: 65%;
+  width: 60%;
   margin-left: auto;
   margin-right: auto;
   opacity: .8;
-  height: 25%;
-  margin-top: 10rem;
+  height: 30%;
+  margin-top: 8rem;
+}
+
+.hello {
+  color: #E8C3B9;
 }
