--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -1,4 +1,4 @@
-.welcome {
+.contact {
   padding: 3rem;
   margin-bottom: 2rem;
   color: rgb(255, 255, 255);
@@ -14,4 +14,5 @@
 
 .hello {
   color: #E8C3B9;
+  margin-bottom: 2rem;
 }
