--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -1,18 +1,18 @@
 .contact {
   padding: 3rem;
-  margin-bottom: 2rem;
-  color: rgb(255, 255, 255);
-  background-color: #1A1A1A;
+  color: #1A1A1A;
+  background-color: #fff;
   border-radius: 25px;
   width: 60%;
+  margin-bottom: 2rem;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 7rem;
   opacity: .8;
   height: 30%;
-  margin-top: 8rem;
 }
 
-.hello {
-  color: #E8C3B9;
+.contacttitle {
+  color: #FF4048;
   margin-bottom: 2rem;
 }
