--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -1,15 +1,15 @@
 .welcome {
   padding: 3rem;
-  margin-bottom: 2rem;
-  color: rgb(255, 255, 255);
+  color: #fff;
   background-color: #1A1A1A;
   border-radius: 25px;
   width: 60%;
+  margin-bottom: 2rem;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 7rem;
   opacity: .8;
   height: 30%;
-  margin-top: 8rem;
 }
 
 .hello {
